# advent-of-code-2020

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  latest
.maintain/: docs-index-tpl.ejs  docs-index-tpl.html  index-tpl-update  rustdocs-release.sh
01-report-repair/: Cargo.toml  README.md  problem.md
01-report-repair/src/: lib.rs  main.rs
02-password-philosophy/: Cargo.toml  problem.md
02-password-philosophy/src/: lib.rs  main.rs  tests.rs
03-toboggan-trajectory/: Cargo.toml  README.md
03-toboggan-trajectory/src/: lib.rs  tests.rs
04-passport-processing/: Cargo.toml  README.md
04-passport-processing/src/: lib.rs  tests.rs
05-binary-boarding/: Cargo.toml  README.md
05-binary-boarding/src/: lib.rs
06-custom-customs/: Cargo.toml  README.md
06-custom-customs/src/: lib.rs
07-handy-haversacks/: Cargo.toml  README.md
07-handy-haversacks/src/: lib.rs
08-handheld-halting/: Cargo.toml  README.md
08-handheld-halting/src/: lib.rs
09-encoding-error/: Cargo.toml  README.md
09-encoding-error/src/: lib.rs
day01/: Cargo.toml
day01/src/: main.rs
main/: search-index.js  settings.html  source-files.js
main/binary_boarding/: fn.find_empty_seats.html  struct.Seat.html
main/docs/: search-index.js
monthly-2021-08/: settings.html
monthly-2021-09/: search-index.js  settings.html
monthly-2021-10/: crates.js  settings.html  source-files.js
monthly-2022-01/: index.html  search-index.js  settings.html
shared/: Cargo.toml
v3.0.0+monthly-2021-08/: settings.html
v3.0.0+monthly-2021-09/: crates.js  index.html  search-index.js  settings.html
v3.0.0+monthly-2021-10/: search-index.js
(+192 files in other folders)
