[package]
name = "binary-boarding"
version = "0.1.0"
authors = ["Jimmy Chu <jimmychu0807@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "binary-boarding"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
