[package]
name = "encoding-error"
version = "0.1.0"
authors = ["Jimmy Chu <jimmychu0807@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "encoding-error"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
